--- a/contactme.html
+++ b/contactme.html
@@ -7,24 +7,24 @@
 </head>
 <body>
     <h1>Fill Details</h1>
-    <form action="mailto:numhyfvhrg@.com" method="post" enctype="text/plain">
+    <form action="mailto:baladanush1911@gmail.com" method="post" enctype="text/plain">
         <table>
        <tr><td><label>
             Name :
         </label></td>
-       <td><input type="text"></td></tr>
+       <td><input type="text" name="name" value=""></td></tr>
        <tr><td> <label>
             PhoneNumber :
         </label></td>
-       <td> <input type="number"></td></tr>
+       <td> <input type="number" name="PhoneNumber" value=""></td></tr>
         <tr><td><label>
             Email ID :
         </label></td>
-       <td><input type="email"></td></tr>
+       <td><input type="email" name="email" value=""></td></tr>
        <tr><td> <label>
             Date Of Birth :
         </label></td>
-        <td><input type="date"></td></tr>
+        <td><input type="date" name="date of Birth" value=""></td></tr>
         </table>
         <input type="submit">
         
