--- a/contactme.html
+++ b/contactme.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Details</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Fill Details</h1>
