--- a/index.html
+++ b/index.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ⓑ bala's personal site </title>
+    <link rel="stylesheet" href="css/styles.css">
  </head>
  <body>
   <table>
     <tr>
-      <td><img src="bala img-modified (1).png" alt="profile picture" width="150" height="150"> </td>
+      <td><img class="mypick" src="bala img-modified (1).png" alt="profile picture" width="150" height="150"> </td>
       <td><h1>Bala murugan.v</h1>   
         <p><em>So For completed <strong>BE Mechanical Engineering</strong></em> </p>
         <p>I am completed <strong>BE Mechanical Engineering</strong> on 2023 after that learing about web developing and I love ♥ to ride bikes and learn about bike engine and I have a <a href="https://www.youtube.com/channel/UCiw0Jcy0_IwunYDjCWiTpHg" ><strong>Youtube Channel</strong></a>.</p> </td>
     </tr>
    </table>
    <hr>
-   <h3>Education</h3>
+   <h2>Education</h2>
    <ul>
     <li>Completed 10^th in Velammal Metric Higher Secondary School on <strong>2017</strong> </li>
     <li>Completed Diploma in Mechanical Engineering in TJS Polytechnic College on <strong>2020</strong></li>
     <li>Completed BE Mechanical Engineering in ST Joseph College Of Engineering on <strong>2023</strong></li>
    </ul>
    <hr >
-   <h3>Hobbies</h3>
+   <h2>Hobbies</h2>
    <ol>
     <li>💻Coding</li>
     <li>🛵MotorCycles</li>
     <li>🏏cricket</li>
     </ol>
     <hr>
-   <h3>Skills</h3>
+   <h2>Skills</h2>
   <table>
       <tr>
         <td>Bootstrap Framework</td>
