--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img class="mypick" src="bala img-modified (1).png" alt="profile picture" width="150" height="150"> </td>
       <td><h1>Bala murugan.v</h1>   
         <p><em>So For completed <strong>BE Mechanical Engineering</strong></em> </p>
-        <p>I am completed <strong>BE Mechanical Engineering</strong> on 2023 after that learing about web developing and I love ♥ to ride bikes and learn about bike engine and I have a <a href="https://www.youtube.com/channel/UCiw0Jcy0_IwunYDjCWiTpHg" ><strong>Youtube Channel</strong></a>.</p> </td>
+        <p>I am completed <strong>BE Mechanical Engineering</strong> on 2023 after that learning about web developing and I love ♥ to ride bikes and learn about bike engine and I have a <a href="https://www.youtube.com/channel/UCiw0Jcy0_IwunYDjCWiTpHg" ><strong>Youtube Channel</strong></a>.</p> </td>
     </tr>
    </table>
    <hr>
@@ -20,7 +20,7 @@
    <ul>
     <li>Completed 10^th in Velammal Metric Higher Secondary School on <strong>2017</strong> </li>
     <li>Completed Diploma in Mechanical Engineering in TJS Polytechnic College on <strong>2020</strong></li>
-    <li>Completed BE Mechanical Engineering in ST Joseph College Of Engineering on <strong>2023</strong></li>
+    <li>Completed BE Mechanical Engineering in ST.Joseph College Of Engineering on <strong>2023</strong></li>
    </ul>
    <hr >
    <h2>Hobbies</h2>
